adding all the functionalities

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,26 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --dark-bg: #162938;
+  --light-bg: #fcfcfc;
+  --white: #fff;
+  --text-color: #054474;
+  --unchecked: #bacdda;
+  --yellow: #fca215;
+  --grey-text: #8c939c;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
-  color: rgb(var(--foreground-rgb));
+  width: 100%;
+  color: rgb(var(--text-color));
   background: linear-gradient(
       to bottom,
       transparent,
